deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.renderer/template-version: 1.0.0
    k8s.renderer/commit: e70caa92ad234cb6b291a923fd4c756902b813cc
    k8s.renderer/branch: refs/heads/main
    k8s.renderer/vcs-url: matiasmartin-labs/auth-provider-ms
    k8s.renderer/render-time: 2026-05-02T23:11:49Z
  labels:
    app.kubernetes.io/name: auth-provider-ms
    app.kubernetes.io/part-of: auth-system
    app.kubernetes.io/version: v1.0.2
    app.kubernetes.io/managed-by: k8s.renderer
  name: auth-provider-ms
  namespace: matiasmartin-labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-provider-ms
      app.kubernetes.io/part-of: auth-system
  template:
    metadata:
      annotations:
        k8s.renderer/template-version: 1.0.0
        k8s.renderer/commit: e70caa92ad234cb6b291a923fd4c756902b813cc
        k8s.renderer/branch: refs/heads/main
        k8s.renderer/vcs-url: matiasmartin-labs/auth-provider-ms
        k8s.renderer/render-time: 2026-05-02T23:11:49Z
      labels:
        app.kubernetes.io/name: auth-provider-ms
        app.kubernetes.io/part-of: auth-system
        app.kubernetes.io/version: v1.0.2
        app.kubernetes.io/managed-by: k8s.renderer
      namespace: matiasmartin-labs
    spec:
      containers:
        - image: ghcr.io/matiasmartin-labs/auth-provider-ms:v1.0.2
          imagePullPolicy: Always
          name: auth-provider-ms
          resources:
            limits:
              cpu: 250m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts: 
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
