ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8s.renderer/template-version: 1.0.0
    k8s.renderer/commit: c6c6f7d5c24909cac8873358909a764cf8b3aef9
    k8s.renderer/branch: refs/heads/main
    k8s.renderer/vcs-url: matiasmartin-labs/auth-provider-ms
    k8s.renderer/render-time: 2026-05-02T22:23:21Z
  labels:
    app.kubernetes.io/name: auth-provider-ms
    app.kubernetes.io/part-of: auth-system
    app.kubernetes.io/version: v1.0.2
    app.kubernetes.io/managed-by: k8s.renderer
  name: auth-provider-ms
  namespace: matiasmartin-labs
spec:
  rules:
    - host: auth-provider-ms.raspisrv.local
      http:
        paths:
          - backend:
              service:
                name: auth-provider-ms
                port:
                  name: http
            path: /
            pathType: Prefix
